<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.ndroid.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">
    <TextView
        style="@style/EditorCategoryStyle"
        android:text="@string/editor_activity_product_category"/>
        <EditText
            android:hint="@string/product_name"
            android:id="@+id/edit_product_name"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <EditText
                android:hint="@string/product_price"
                android:id="@+id/edit_product_price"
                android:inputType="numberDecimal"
                style="@style/EditorFieldStyle"/>
            <TextView
                android:text="@string/unit_product_price"
                style="@style/EditorUnitsStyle"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <EditText
                android:hint="@string/product_quantity"
                android:id="@+id/edit_product_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle"/>
            <TextView
                android:text="@string/unit_product_quantity"
                style="@style/EditorUnitsStyle"/>
        </RelativeLayout>
    </LinearLayout>
    <TextView
        style="@style/EditorCategoryStyle"
        android:text="@string/editor_activity_supplier_category"/>
    <EditText
        android:hint="@string/supplier_name"
        android:id="@+id/edit_supplier_name"
        android:inputType="textCapWords"
        style="@style/EditorFieldStyle"/>
    <EditText
        android:hint="@string/supplier_phone"
        android:id="@+id/edit_supplier_phone"
        android:inputType="phone"
        style="@style/EditorFieldStyle"/>
    </LinearLayout>
